// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Request toMatchApiSnapshot should process object with ignore 1`] = `
{
  "createdAt": "[IGNORED]",
  "id": 1,
  "name": "test",
}
`;

exports[`Snapshot Request toMatchApiSnapshot should process object without ignore 1`] = `
{
  "id": 1,
  "name": "test",
}
`;
